--- a/pado_visualize/pado/ext/visualize/assets/pado.css
+++ b/pado_visualize/pado/ext/visualize/assets/pado.css
@@ -1,4 +1,8 @@
 
+#page-content {
+    padding-top: 10px;
+}
+
 .thumbnail-container {
     display: flex;
     flex-wrap: wrap;
@@ -10,6 +14,10 @@
     height: 200px;
     margin: 2px;
     background: #f3f4f5;  /* fixme: this should be provided dynamically */
+}
+
+.card.plot-card {
+    height: 350px;
 }
 
 .thumbnail {
