--- a/pado_visualize/pado/ext/visualize/assets/pado.css
+++ b/pado_visualize/pado/ext/visualize/assets/pado.css
@@ -28,3 +28,12 @@
     height: auto;
     margin: auto;
 }
+
+.grid-overlay {
+    display: none;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    margin: auto;
+}
