--- a/pado_visualize/assets/pado.css
+++ b/pado_visualize/assets/pado.css
@@ -75,17 +75,16 @@
     background: #DF59A8;
 }
 
-.pado-content {
-    padding: 0;
-}
-
 .pado-body {
     min-height: 100vh;
 }
 
-
 #page-content {
     padding-top: 10px;
+}
+
+.card.plot-card {
+    height: 350px;
 }
 
 .thumbnail-container {
@@ -95,46 +94,46 @@
 }
 
 .card.thumbnail-card {
+    display: flex;
     width: 200px;
     height: 200px;
     margin: 2px;
     background: #f3f4f5;  /* fixme: this should be provided dynamically */
-}
+    justify-content: center;
+    align-items: center;
 
-.card.plot-card {
-    height: 350px;
 }
 
 .thumbnail {
+    display: block;
     max-width: 100%;
     max-height: 100%;
-    width: auto;
+    width: 100%;
     height: auto;
-    margin: auto;
 }
 
-.thumbnail-card > .thumbnail {
-    display: block;
+.grid-overlay {
+    display: none;
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: auto;
 }
 
 .thumbnail-card:hover > .thumbnail {
     display: none;
 }
 
-
-.grid-overlay {
-    display: none;
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
-    margin: auto;
-}
-
-.thumbnail-card > .grid-overlay {
-    display: none;
-}
-
 .thumbnail-card:hover > .grid-overlay {
     display: block;
+}
+
+.thumbnail-card > img {
+    image-rendering: optimizeSpeed;             /*                     */
+    image-rendering: -moz-crisp-edges;          /* Firefox             */
+    image-rendering: -o-crisp-edges;            /* Opera               */
+    image-rendering: -webkit-optimize-contrast; /* Chrome (and Safari) */
+    image-rendering: pixelated;                 /* Chrome as of 2019   */
+    image-rendering: optimize-contrast;         /* CSS3 Proposed       */
+    -ms-interpolation-mode: nearest-neighbor;   /* IE8+                */
 }
