--- a/pado_visualize/assets/pado.css
+++ b/pado_visualize/assets/pado.css
@@ -137,3 +137,13 @@
     image-rendering: optimize-contrast;         /* CSS3 Proposed       */
     -ms-interpolation-mode: nearest-neighbor;   /* IE8+                */
 }
+
+#seadragon-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    color: white;
+}
