--- a/pado_visualize/assets/pado.css
+++ b/pado_visualize/assets/pado.css
@@ -36,6 +36,20 @@
     left: 36px;
 }
 
+.pado-sidebar h5 {
+    font-family: monospace;
+    font-size: 18px;
+    margin-top: 10px;
+    color: #ee99d4;
+}
+
+.pado-sidebar label {
+    width: 100%;
+    color: lightgray;
+    font-family: monospace;
+    font-size: 13px;
+}
+
 .pado-logo .logo-subtext {
     position: absolute;
     top: 28px;
@@ -148,22 +162,25 @@
     color: white;
 }
 
-.pado-body {
-  background: url(background_small.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-position: 0 0;
-  /* animation: ANIMATION-background 20s linear infinite; */
+.pado-background {
+    background: url(background_landing.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
 }
-/*
-@keyframes ANIMATION-background {
-    0% { background-position: 0 0; }
-    50% { background-position: -200px 0; }
-    100% { background-position: 0 0; }
-}
-*/
 
-.pado-content {
+.pado-jumbotron h1 {
+    font-size: 48px;
+    font-family: monospace;
+    font-weight: 400;
+    color: #333333;
+}
+
+.pado-jumbotron p {
+    font-size: 14px;
+    font-family: monospace;
+    color: #333333;
 }
