--- a/pado_visualize/assets/pado.css
+++ b/pado_visualize/assets/pado.css
@@ -141,26 +141,34 @@
     justify-content: center;
 }
 
-.card.thumbnail-card {
+.slide-container {
     display: flex;
+    position: relative;
     width: 200px;
     height: 200px;
     margin: 2px;
+}
+
+.slide-container .thumbnail-card {
+    display: flex;
+    width: 100%;
+    height: 100%;
     background: #f3f4f5;  /* fixme: this should be provided dynamically */
     justify-content: center;
     align-items: center;
-
+    padding: 4px;
 }
 
-.thumbnail {
+.slide-container .thumbnail-card .thumbnail {
     display: block;
     max-width: 100%;
     max-height: 100%;
-    width: 100%;
+    width: auto;
     height: auto;
+    margin: auto;
 }
 
-.grid-overlay {
+.slide-container .thumbnail-card .grid-overlay {
     display: none;
     max-width: 100%;
     max-height: 100%;
@@ -168,13 +176,40 @@
     height: auto;
 }
 
-.thumbnail-card:hover > .thumbnail {
+.slide-container .annotation-indicator {
+    position: absolute;
+    margin: 3px;
+    padding: 2px 7px;
+    top: 0;
+    left: 0;
+    border-radius: 15px;
+    background: #333333;
+    color: #f3f4f5;
+}
+
+.slide-container .prediction-indicator {
+    position: absolute;
+    margin: 3px;
+    padding: 2px 8px;
+    top: 0;
+    right: 0;
+    font-weight: 600;
+    border-radius: 15px;
+    background: rgb(123, 121, 113);
+    color: #ffffff;
+}
+
+
+
+/*
+.thumbnail-card:hover .thumbnail {
     display: none;
 }
 
-.thumbnail-card:hover > .grid-overlay {
+.thumbnail-card:hover .grid-overlay {
     display: block;
 }
+*/
 
 .thumbnail-card > img {
     image-rendering: optimizeSpeed;             /*                     */
