--- a/pado_visualize/assets/dash_bootstrap_compat.css
+++ b/pado_visualize/assets/dash_bootstrap_compat.css
@@ -56,9 +56,9 @@
   border-right-color: rgba(55, 55, 55, 0.25);
 }
 
-.dash-bootstrap .has-value.Select--single > .Select-control .Select-value .Select-value-label,
-.dash-bootstrap .has-value.is-pseudo-focused.Select--single > .Select-control .Select-value .Select-value-label {
-  color: #444;
+.dash-bootstrap .Select.has-value.Select--single > .Select-control .Select-value .Select-value-label,
+.dash-bootstrap .Select.has-value.is-pseudo-focused.Select--single > .Select-control .Select-value .Select-value-label {
+  color: #eee;
 }
 
 .dash-bootstrap .Select-multi-value-wrapper {
