--- a/pado_visualize/assets/pado.css
+++ b/pado_visualize/assets/pado.css
@@ -134,6 +134,9 @@
     padding: 0.5em;
     height: 220px;
 }
+.card.plot-card.summary {
+    height: 400px;
+}
 
 .thumbnail-container {
     display: flex;
