[pado_visualize] reorganize and add a whole lot of files

--- a/pado_visualize/assets/css-99-pado.css
+++ b/pado_visualize/assets/css-99-pado.css
@@ -224,7 +224,8 @@
     -ms-interpolation-mode: nearest-neighbor;   /* IE8+                */
 }
 
-#seadragon-container {
+#seadragon-container,
+#seadragon-multi-container {
     position: absolute;
     top: 0;
     left: 0;
