--- a/pado_visualize/assets/css-99-pado.css
+++ b/pado_visualize/assets/css-99-pado.css
@@ -236,7 +236,7 @@
 }
 
 .pado-background {
-    background: url(background_landing.jpg) no-repeat center center fixed;
+    background: url(img/background_landing.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
