--- a/pado_visualize/assets/css-99-pado.css
+++ b/pado_visualize/assets/css-99-pado.css
@@ -202,6 +202,23 @@
     color: #ffffff;
 }
 
+.slide-container .prediction-value-indicator {
+    position: absolute;
+    margin: 3px;
+    padding: 2px 7px;
+    bottom: 0;
+    left: 0;
+    border-radius: 5px;
+    background: dodgerblue;
+    color: #f3f4f5;
+}
+
+.slide-container .prediction-value-indicator > span {
+    display: block;
+    font-size: smaller;
+    white-space: nowrap;
+}
+
 
 
 /*
