--- a/pado_visualize/static_src/css/base.scss
+++ b/pado_visualize/static_src/css/base.scss
@@ -1,6 +1,140 @@
-$primary-color: white;
-$bg: black;
-h1 {
-  color: $primary-color;
-  background-color: $bg;
+
+$fa-font-path: "../webfonts";
+
+/* colors */
+$color-primary-light: #e2aedd;
+$color-primary-dark: #252340;
+$color-white: #ffffff;
+$color-black: #0a0a0a;
+$color-success: #b6c649;
+$color-alert: #d81e5b;
+
+/* fonts */
+$primary-font: "Lato", sans-serif;
+
+/* latin-ext */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh7USSwaPGQ3q5d0N7w.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh7USSwiPGQ3q5d0.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/lato/v17/S6uyw4BMUTPHjxAwXiWtFCfQ7A.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/lato/v17/S6uyw4BMUTPHjx4wXiWtFCc.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh50XSwaPGQ3q5d0N7w.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh50XSwiPGQ3q5d0.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* tags */
+* {
+  font-family: $primary-font;
+}
+
+.pado.pado-root {
+  height: 100vh;
+  display: grid;
+  grid-template: auto 1fr / auto 1fr auto;
+}
+
+.pado header {
+  padding: 2rem;
+  grid-column: 2 / 3;
+}
+
+.pado nav {
+  grid-row: 1 / 4;
+  grid-column: 1 / 2;
+  max-width: 240px;
+  background: $color-primary-dark;
+  color: $color-white;
+  padding: 1.4em 1em;
+}
+
+.pado-sidebar .nav-link {
+  display: grid;
+  grid-template: 1fr auto / 1fr auto;
+  padding: 6px 10px;
+  border-radius: 10px;
+  text-decoration: none;
+  background: rgba(255,255,255,0.0);
+  transition: background 400ms;
+
+  &:hover {
+    background: rgba(255,255,255,0.05);
+  }
+
+  img {
+    width: 34px;
+    grid-column: 1;
+    grid-row: 1 / 3;
+    border-radius: 14px;
+  }
+
+  h2 {
+    font-size: 20px;
+    font-weight: 300;
+    margin: 0;
+    padding-left: 8px;
+    color: #eee;
+  }
+
+  h3 {
+    margin: 0;
+    font-weight: 200;
+    font-size: 10px;
+    padding-left: 9px;
+    color: #999;
+    text-transform: lowercase;
+  }
+
+}
+
+.pado main {
+  grid-column: 2 / 3;
+}
+
+.pado footer {
+  grid-column: 1 / 3;
 }
