pado_visualize: use fontawesome via scss and more cleanup

--- a/pado_visualize/static_src/css/base.scss
+++ b/pado_visualize/static_src/css/base.scss
@@ -1,5 +1,7 @@
 
-$fa-font-path: "../webfonts";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+$fa-font-path: "../../../node_modules/@fortawesome/fontawesome-free/webfonts";
+@import "~@fortawesome/fontawesome-free/scss/solid.scss";
 
 /* colors */
 $color-primary-light: #e2aedd;
