--- a/pado_visualize/static_src/css/base.scss
+++ b/pado_visualize/static_src/css/base.scss
@@ -90,48 +90,109 @@ $primary-font: "Lato", sans-serif;
   grid-column: 1 / 2;
   max-width: 240px;
   background: $color-primary-dark;
-  color: $color-white;
   padding: 1.4em 1em;
 }
 
-.pado-sidebar .nav-link {
-  display: grid;
-  grid-template: 1fr auto / 1fr auto;
-  padding: 6px 10px;
-  border-radius: 10px;
-  text-decoration: none;
-  background: rgba(255,255,255,0.0);
-  transition: background 400ms;
+$menu-border-radius: 15px;
+$menu-text-color: #eee;
+$menu-text-color-subtle: #bbb;
 
-  &:hover {
-    background: rgba(255,255,255,0.05);
+.pado-sidebar .header {
+  a {
+    display: grid;
+    grid-template: 1fr auto / 1fr auto;
+    padding: 10px 10px;
+    border-radius: $menu-border-radius;
+    text-decoration: none;
+    background: rgba(255, 255, 255, 0.0);
+    transition: background 400ms;
+
+    &:hover {
+      background: rgba(255, 255, 255, 0.05);
+    }
+
+    img {
+      width: 34px;
+      grid-column: 1;
+      grid-row: 1 / 3;
+      border-radius: 14px;
+    }
+
+    h2 {
+      font-size: 20px;
+      font-weight: 300;
+      margin: 0;
+      padding-left: 8px;
+      color: $menu-text-color;
+    }
+
+    h3 {
+      margin: 0;
+      font-weight: 200;
+      font-size: 10px;
+      padding-left: 9px;
+      color: $menu-text-color-subtle;
+      text-transform: lowercase;
+    }
   }
-
-  img {
-    width: 34px;
-    grid-column: 1;
-    grid-row: 1 / 3;
-    border-radius: 14px;
-  }
-
-  h2 {
-    font-size: 20px;
-    font-weight: 300;
-    margin: 0;
-    padding-left: 8px;
-    color: #eee;
-  }
-
-  h3 {
-    margin: 0;
-    font-weight: 200;
-    font-size: 10px;
-    padding-left: 9px;
-    color: #999;
-    text-transform: lowercase;
-  }
-
 }
+
+.pado-sidebar .menu {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+
+  .menu-item {
+    margin-top: 3px;
+    margin-bottom: 2px;
+
+    a {
+      display: flex;
+      flex-direction: row;
+      padding: 10px 10px;
+      font-weight: 300;
+      border-radius: $menu-border-radius;
+      text-decoration: none;
+      background: rgba(255, 255, 255, 0.0);
+      transition: background 400ms, color 400ms;
+      color: $menu-text-color-subtle;
+
+      &:hover {
+        background: rgba(255, 255, 255, 0.05);
+        color: $menu-text-color;
+      }
+      &:visited {
+        color: $menu-text-color-subtle;
+      }
+
+      span.menu-icon {
+        display: flex;
+        width: 34px;
+        color: inherit;
+        i {
+          margin: auto;
+        }
+      }
+
+      span.menu-text {
+        color: inherit;
+        padding-left: 6px;
+      }
+    }
+  }
+
+  .menu-item.active {
+    a {
+      background: rgba(255, 255, 255, 0.05);
+      color: $menu-text-color;
+    }
+  }
+}
+
+
 
 .pado main {
   grid-column: 2 / 3;
