--- a/pado_visualize/templates/base/base.html
+++ b/pado_visualize/templates/base/base.html
@@ -5,40 +5,32 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>{% block title %}{{ page_title_prefix|default("pado_visualize ::") }}{% endblock title %}</title>
+  <title>{% block title %}{{ page_title_prefix|default("pado_visualize ::") }} {{ page_title }}{% endblock title %}</title>
 
   <link rel="icon" type="image/x-icon" href="{{ url_for_versioned('static', filename='favicon.ico') }}">
 
   {% block styles_base %}
-    <link rel="stylesheet" href="{{ url_for_versioned('static', filename='vendor/theme/4.5.2/sandstone/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/base.css') }}">
   {% endblock styles_base %}
   {% block styles %}{% endblock styles %}
   {% block styles_override %}{% endblock styles_override %}
   {% block scripts_header %}{% endblock scripts_header %}
 </head>
 <body>
-
-<div id="pado-root">
-  <div id="pado-body" class="pado-background container-fluid">
-    <div class="pado-body row">
-      <div class="pado-sidebar col-lg-3">
-        <div class="page-sidebar">
-          {% block sidebar %}{% endblock sidebar %}
-        </div>
-      </div>
-      <div class="pado-content col-lg-9">
-        <div class="page-content">
-          {% block content %}{% endblock content %}
-        </div>
-      </div>
-    </div>
+  <div class="pado pado-root">
+    <header class="pado-header">
+      {% include "base/header.html" %}
+    </header>
+    <nav class="pado-sidebar">
+      {% include "base/sidebar.html" %}
+    </nav>
+    <main class="pado-main">
+      {% block content %}{% endblock content %}
+    </main>
+    <footer class="pado-footer">
+      {% block footer %}{% endblock footer %}
+    </footer>
   </div>
-</div>
-
-<footer>
-  {% block footer %}{% endblock footer %}
-</footer>
-
 {% block page_scripts %}{% endblock page_scripts %}
 </body>
 </html>
