--- a/pado_visualize/templates/base/sidebar.html
+++ b/pado_visualize/templates/base/sidebar.html
@@ -1,23 +1,27 @@
 
-<div class="dash-bootstrap container">
-  <div class="row">
-    <div class="col">
-      <a href="/">
-        <div class="pado-logo">
-          <div class="logo-image-container">
-            <img alt="logo" src="{{ url_for('static', filename='img/pathological-heart.jpg') }}">
-          </div>
-          <span class="logo-text">Pado</span>
-          <h3 class="logo-subtext">Pathological Data Obsession</h3>
-        </div>
-      </a>
-    </div>
+{% macro menu_item(text, href, fa=none) -%}
+  <li class="menu-item {% if href.split('.')[0] == request.endpoint.split('.')[0] %}active{% endif %}">
+    <a href="{{ url_for(href) }}" >
+      <span class="menu-icon">{% if fa %}<i class="fas fa-{{ fa }}"></i>{% endif %}</span>
+      <span class="menu-text">{{ text }}</span>
+    </a>
+  </li>
+{%- endmacro %}
+
+
+<div class="pado-sidebar container">
+  <div class="header">
+    <a href="{{ url_for('home.index') }}">
+      <h2>Pado Visualize</h2>
+      <h3>Pathological Data Obsession</h3>
+      <img alt="logo" src="{{ url_for('static', filename='images/pathological-heart.jpg') }}">
+    </a>
   </div>
-  <div class="row">
-    <div class="col">
-      <p>Welcome! Please select a display mode and the subset of data you want to look at.</p>
-    </div>
-  </div>
-  <div id="sidebar-content"><h5>Display Mode</h5>
-  </div>
+
+  <ul class="menu">
+    {{ menu_item("Overview", 'home.index', fa='globe-europe') }}
+    {# menu_item("Metadata", 'home.index', fa='file-alt') #}
+    {{ menu_item("Slides", 'slides.index', fa='microscope') }}
+  </ul>
+
 </div>
