--- a/pado_visualize/templates/slides/index.html
+++ b/pado_visualize/templates/slides/index.html
@@ -2,9 +2,12 @@
 
 {% block styles %}
   {{ super() }}
-  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides-thumbnails.css') }}">
-{% endblock %}
+  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides.css') }}">
+{% endblock styles %}
 
+{% block page_scripts %}
+  <script type="text/javascript" src="{{ url_for_versioned('static', filename='js/slides.js') }}"></script>
+{% endblock page_scripts %}
 
 {% block content %}
   <div id="slides-container" class="container">
