--- a/pado_visualize/templates/home/index.html
+++ b/pado_visualize/templates/home/index.html
@@ -1,5 +1,10 @@
 {% extends "base/base.html" %}
 
+{% block styles %}
+  {{ super() }}
+  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/home.css') }}">
+{% endblock styles %}
+
 {% block content %}
   <div id="landing-container" class="container">
     <div class="row">
