--- a/pado_visualize/templates/slides/viewer_openseadragon.html
+++ b/pado_visualize/templates/slides/viewer_openseadragon.html
@@ -2,8 +2,8 @@
 
 {% block styles %}
   {{ super() }}
-  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides-openseadragon.css') }}">
-  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='vendor/openseadragon/css-42-openseadragon-annotorious.min.css') }}">
+  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides_openseadragon.css') }}">
+  <!-- link rel="stylesheet" href="{{ url_for_versioned('static', filename='vendor/openseadragon/css-42-openseadragon-annotorious.min.css') }}"-->
 {% endblock styles %}
 
 {% block scripts_header %}
