pado_visualize: move base templates

--- a/pado_visualize/templates/layout.html
+++ b/pado_visualize/templates/layout.html
@@ -19,10 +19,10 @@
 <body>
   <div class="pado pado-root">
     <header class="pado-header">
-      {% include "base/header.html" %}
+      {% include "header.html" %}
     </header>
     <nav class="pado-sidebar">
-      {% include "base/sidebar.html" %}
+      {% include "sidebar.html" %}
     </nav>
     <main class="pado-main">
       {% block content %}{% endblock content %}
