frontend: add missing code changes (wip)

--- a/pado_visualize/static_src/css/base.scss
+++ b/pado_visualize/static_src/css/base.scss
@@ -1,7 +1,7 @@
 
-@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
 $fa-font-path: "../../../node_modules/@fortawesome/fontawesome-free/webfonts";
-@import "~@fortawesome/fontawesome-free/scss/solid.scss";
+@import "node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
 @import "colors";
 
 /* fonts */
