--- a/pado_visualize/templates/slides/index.html
+++ b/pado_visualize/templates/slides/index.html
@@ -1,4 +1,4 @@
-{% extends "base/base.html" %}
+{% extends "layout.html" %}
 
 {# the creates one slide card #}
 {% macro slide_card(image_id, image) %}
