pado_visualize: fix several small import issues

--- a/pado_visualize/templates/home/index.html
+++ b/pado_visualize/templates/home/index.html
@@ -2,7 +2,7 @@
 
 {% block styles %}
   {{ super() }}
-  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/home.css') }}">
+  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/home.scss') }}">
 {% endblock styles %}
 
 {% block content %}
