--- a/pado_visualize/templates/layout.html
+++ b/pado_visualize/templates/layout.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="{{ url_for_versioned('static', filename='favicon.ico') }}">
 
   {% block styles_base %}
-    <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/base.css') }}">
+    <link rel="stylesheet" href="{{ url_for_versioned('static', filename='base.css') }}">
   {% endblock styles_base %}
   {% block styles %}{% endblock styles %}
   {% block styles_override %}{% endblock styles_override %}
