--- a/pado_visualize/templates/home/index.html
+++ b/pado_visualize/templates/home/index.html
@@ -7,19 +7,25 @@
 
 {% block content %}
   <div id="landing-container" class="container">
+    <h1>Dataset Overview</h1>
     <div class="row">
       <div class="col">
-        <div class="pado-jumbotron jumbotron">
-          <p>Explore the metadata, image data, annotations and predictions stored in your PadoDataset.</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <p>configured datasets: {{ ", ".join(info['dataset_paths']) }}</p>
-        <p>Images: {{ info['images'] }}</p>
-        <p>Annotations: {{ info['annotations'] }}</p>
-        <p>Metadata: {{ info['metadata'] }}</p>
+        <table>
+          {% for key in info %}
+          <tr>
+            <td>
+              {{ key | replace("_", " ") | capitalize }}
+            </td>
+            <td>
+              {% if info[key] is float %}
+              {{ info[key] | round(3, 'floor') }}
+              {% else %}
+                {{ info[key] }}
+              {% endif %}
+            </td>
+          </tr>
+          {% endfor %}
+        </table>
       </div>
     </div>
   </div>
