--- a/pado_visualize/templates/slides/viewer_openseadragon.html
+++ b/pado_visualize/templates/slides/viewer_openseadragon.html
@@ -2,8 +2,8 @@
 
 {% block styles %}
   {{ super() }}
-  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides_openseadragon.css') }}">
-  <!-- link rel="stylesheet" href="{{ url_for_versioned('static', filename='vendor/openseadragon/css-42-openseadragon-annotorious.min.css') }}"-->
+  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides_openseadragon.scss') }}">
+  <!-- link rel="stylesheet" href="{{ url_for_versioned('static', filename='images/openseadragon/css-42-openseadragon-annotorious.min.css') }}"-->
 {% endblock styles %}
 
 {% block scripts_header %}
@@ -17,7 +17,7 @@
 {% endblock content %}
 
 {% block page_scripts %}
-  <script src="{{ url_for_versioned('static', filename='slides_openseadragon.js') }}"></script>
+  <script src="{{ url_for_versioned('static', filename='js/slides_openseadragon.js') }}"></script>
   <script type="text/javascript">
       setupOpenSeadragonViewer({
           id: "seadragon-container",
