--- a/pado_visualize/templates/slides/viewer_openseadragon.html
+++ b/pado_visualize/templates/slides/viewer_openseadragon.html
@@ -2,7 +2,6 @@
 
 {% block styles %}
   {{ super() }}
-  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides_openseadragon.scss') }}">
   <!-- link rel="stylesheet" href="{{ url_for_versioned('static', filename='images/openseadragon/css-42-openseadragon-annotorious.min.css') }}"-->
 {% endblock styles %}
 
@@ -17,8 +16,88 @@
 {% endblock content %}
 
 {% block page_scripts %}
-  <script src="{{ url_for_versioned('static', filename='js/slides_openseadragon.js') }}"></script>
+  <script type="text/javascript" src="static/temporary/openseadragon-2.4.2/openseadragon.js">
   <script type="text/javascript">
+      function documentReady(fn) {
+          if (document.readyState !== "loading") {
+              fn();
+          } else {
+              document.addEventListener("DOMContentLoaded", fn);
+          }
+      }
+
+      function setupOpenSeadragonViewer(options) {
+          const navImages = (function (imageObj) {
+              /* to make parcel aware of the image assets we need
+               * to explicitly reference them in a js module here */
+              const _mapToKey = (filename) => {
+                  let name = filename.split("_")[0];
+                  if (name === "zoomin") {
+                      name = "zoomIn";
+                  } else if (name === "zoomout") {
+                      name = "zoomOut";
+                  }
+                  return name;
+              };
+              const _mapToAction = (action) => {
+                  if (action === "grouphover") {
+                      return "GROUP";
+                  } else if (action === "pressed") {
+                      return "DOWN";
+                  } else {
+                      return action.toUpperCase();
+                  }
+              };
+
+              let out = {};
+              for (let [sourceFilename, targetFilename] of Object.entries(imageObj)) {
+                  // eslint-disable-next-line no-unused-vars
+                  let [name, action, _ext] = sourceFilename.split(/[_.]/);
+                  name = _mapToKey(name);
+                  action = _mapToAction(action);
+                  if (!Object.prototype.hasOwnProperty.call(out, name)) {
+                      out[name] = {};
+                  }
+                  out[name][action] = targetFilename;
+              }
+              return out;
+          })(images);
+
+          const defaultOptions = {
+              prefixUrl: "",
+              navImages: navImages,
+              showNavigator: true,
+              showRotationControl: true,
+              animationTime: 0.5,
+              blendTime: 0.1,
+              constrainDuringPan: true,
+              maxZoomPixelRatio: 2,
+              minZoomLevel: 1,
+              visibilityRatio: 1,
+              zoomPerScroll: 2,
+              timeout: 120000,
+          };
+
+          return new Promise((resolve) => {
+              documentReady(function () {
+                  let osdOptions = Object.assign({}, options, defaultOptions);
+
+                  let osdviewer = new OpenSeadragon(osdOptions);
+                  osdviewer.addHandler("open", function () {
+                      // To improve load times, ignore the lowest-resolution Deep Zoom
+                      // levels.  This is a hack: we can't configure the minLevel via
+                      // OpenSeadragon configuration options when the viewer is created
+                      // from DZI XML.
+                      osdviewer.source.minLevel = 8;
+                  });
+
+                  resolve(osdviewer);
+                  // osdvieweranno = OpenSeadragon.Annotorious(window.osdviewer);
+                  /* anno.loadAnnotations(annotations); */
+              });
+          });
+      }
+
       setupOpenSeadragonViewer({
           id: "seadragon-container",
           tileSources: "{{ url_for('slides.slide_dzi', image_id=image_id) }}"
