--- a/pado_visualize/templates/slides/index.html
+++ b/pado_visualize/templates/slides/index.html
@@ -14,12 +14,19 @@
   </a>
 {% endmacro %}
 
+{% macro search_bar() %}
+  <h2>Search:</h2>
+{% endmacro %}
+
 {% block styles %}
   {{ super() }}
   <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides.css') }}">
 {% endblock styles %}
 
 {% block content %}
+  <div>
+    {{ search_bar() }}
+  </div>
   <div class="container slide-container">
     {% for image_id, image in image_id_pairs %}
       {{ slide_card(image_id, image) }}
