pado_vis: fix polyfills

--- a/pado_visualize/templates/slides/viewer_openseadragon.html
+++ b/pado_visualize/templates/slides/viewer_openseadragon.html
@@ -17,7 +17,7 @@
 {% endblock content %}
 
 {% block page_scripts %}
-  <script type="text/javascript" src="{{ url_for('static', filename='temporary/annotorious-openseadragon-2.5.7/recogito-polyfill.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='temporary/annotorious-openseadragon-2.5.7/recogito-polyfills.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='temporary/openseadragon-2.4.2/openseadragon.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='temporary/annotorious-openseadragon-2.5.7/openseadragon-annotorious.min.js') }}"></script>
   <script type="text/javascript">
